--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,18 @@
     tools:context=".MainActivity">
 
     <Button
+        android:id="@+id/EditAccount"
+        android:layout_width="142dp"
+        android:layout_height="56dp"
+        android:text="Edit Account"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/createAccountBtn"
+        app:layout_constraintVertical_bias="0.347" />
+
+    <Button
         android:id="@+id/loginBtn"
         android:layout_width="142dp"
         android:layout_height="56dp"
