--- a/app/src/main/res/layout/activity_temp_display_page.xml
+++ b/app/src/main/res/layout/activity_temp_display_page.xml
@@ -7,10 +7,9 @@
     tools:context=".tempDisplayPage">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/text_view_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="This is the display page"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
