--- a/app/src/main/res/layout/activity_edit_account_page.xml
+++ b/app/src/main/res/layout/activity_edit_account_page.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".EditAccountPage">
 
+    <Button
+        android:id="@+id/editAccountDelete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete Account"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.309"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editAccountPassword"
+        app:layout_constraintVertical_bias="0.297" />
+
     <TextView
         android:id="@+id/textviewPassword"
         android:layout_width="wrap_content"
@@ -114,10 +126,10 @@
         android:text="Submit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.471"
+        app:layout_constraintHorizontal_bias="0.758"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editAccountPassword"
-        app:layout_constraintVertical_bias="0.31" />
+        app:layout_constraintVertical_bias="0.297" />
 
     <TextView
         android:id="@+id/textViewInformation"
