--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="lightBlueBtnColor">#0388A6</color>
+    <color name="mediumBlueBtnColor">#03588C</color>
+    <color name="darkBlueBtnColor">#023373</color>
 </resources>
